<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.nchueccdemo.MainActivity">
    <item
        android:id="@+id/action_user"
        android:orderInCategory="1"
        android:title="@string/action_user"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_store"
        android:orderInCategory="2"
        android:title="@string/action_store"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_nchu"
        android:orderInCategory="3"
        android:title="@string/action_nchu"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
