<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_nchu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NchuActivity"
    tools:showIn="@layout/activity_nchu">

    <ImageView
        android:id="@+id/image_nchu"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/action_nchu"
        app:srcCompat="@drawable/wallet" />

    <LinearLayout
        android:id="@+id/layout_nchu_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF8D"
        android:layout_margin="@dimen/padding"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:id="@+id/label_nchu_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_address"
            android:textSize="@dimen/font_text_size_20" />

        <TextView
            android:id="@+id/text_nchu_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:gravity="center"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_nchu_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding"
        android:background="#FFFF8D"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:id="@+id/lable_nchu_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_token"
            android:textSize="@dimen/font_text_size_20" />

        <TextView
            android:id="@+id/text_nchu_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:textSize="@dimen/font_text_size_16" />

    </LinearLayout>

    <Button
        android:id="@+id/button_nchu_notify"
        style="@style/button_style"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/button_nchu_notify" />

    <EditText
        android:id="@+id/input_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:hint="@string/hint_nchu_phone"
        android:inputType="phone" />
</LinearLayout>