<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/bike"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/image_content_description_bike"
        android:padding="@dimen/padding"
        app:srcCompat="@drawable/bike" />

    <Button
        android:id="@+id/button_user"
        style="@style/button_style"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:padding="@dimen/fab_margin"
        android:text="@string/button_user"
        android:textSize="@dimen/font_text_size_20" />

    <Button
        android:id="@+id/button_store"
        style="@style/button_style"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:padding="@dimen/fab_margin"
        android:text="@string/button_store"
        android:textSize="@dimen/font_text_size_20" />

    <Button
        android:id="@+id/button_nchu"
        style="@style/button_style"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:padding="@dimen/fab_margin"
        android:text="@string/button_nchu"
        android:textSize="@dimen/font_text_size_20" />
</LinearLayout>