<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_store"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".StoreActivity"
    tools:showIn="@layout/activity_store">

    <ImageView
        android:id="@+id/image_store"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/action_store"
        app:srcCompat="@drawable/store" />

    <LinearLayout
        android:id="@+id/layout_store_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF8D"
        android:layout_margin="@dimen/padding"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:id="@+id/label_store_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_address"
            android:textSize="@dimen/font_text_size_20" />

        <TextView
            android:id="@+id/text_store_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:gravity="center"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_store_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF8D"
        android:layout_margin="@dimen/padding"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:id="@+id/label_storee_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_token"
            android:textSize="@dimen/font_text_size_20" />

        <TextView
            android:id="@+id/text_store_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:textSize="@dimen/font_text_size_18" />

    </LinearLayout>

    <Button
        android:id="@+id/button_store_code"
        style="@style/button_style"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginBottom="32dp"
        android:padding="@dimen/margin"
        android:text="@string/button_store_qrcode"
        android:textSize="@dimen/font_text_size_20" />

    <Button
        android:id="@+id/button_store_transfer"
        style="@style/button_style"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginBottom="32dp"
        android:padding="@dimen/margin"
        android:text="@string/button_store_spend"
        android:textSize="@dimen/font_text_size_20" />


</LinearLayout>